# OCCTestbed

./: CMakeLists.txt
MakeBottle/: CMakeLists.txt  MakeBottle.cpp  MakeBottle.html  MinimalTest.cpp
cmake_modules/: FindOpenCasCade.cmake  emscripten.cmake
